2011-04-28  Juanma Barranquero  <lekktu@gmail.com>

	* w32.c (init_environment): Warn about defaulting HOME to C:\.

2011-04-28  Juanma Barranquero  <lekktu@gmail.com>

	* keyboard.c (Qdelayed_warnings_hook): Define.
	(command_loop_1): Run `delayed-warnings-hook'
	if Vdelayed_warnings_list is non-nil.
	(syms_of_keyboard) <delayed-warnings-hook>: DEFSYM it.
	(syms_of_keyboard) <delayed-warnings-list>: DEFVAR_LISP it.

2011-04-28  Eli Zaretskii  <eliz@gnu.org>

	* doprnt.c (doprnt): Don't return value smaller than the buffer
	size if the message was truncated.  (Bug#8545).

2011-04-28  Juanma Barranquero  <lekktu@gmail.com>

	* w32fns.c (Fx_change_window_property, Fx_delete_window_property)
	(Fx_window_property): #if-0 the whole functions, not just the bodies.

2011-04-27  Paul Eggert  <eggert@cs.ucla.edu>

	* doprnt.c (doprnt): Support "ll" length modifier, for long long.

2011-04-27  Juanma Barranquero  <lekktu@gmail.com>

	* makefile.w32-in: Update dependencies.

2011-04-27  Eli Zaretskii  <eliz@gnu.org>

	Improve `doprnt' and its usage.  (Bug#8545)
	* doprnt.c (doprnt): Make sure `format' is never accessed beyond
	`format_end'.  Remove support for %l as a conversion specifier.
	Don't use xrealloc.  Improve diagnostics when the %l size modifier
	is used.  Update the commentary.

	* eval.c (verror): Simplify calculation of size_t.

	* coding.c (Ffind_operation_coding_system): Fix diagnostic error
	messages.

2011-04-27  Yoshiaki Kasahara  <kasahara@nc.kyushu-u.ac.jp>  (tiny change)

	* buffer.c (init_buffer) [USE_MMAP_FOR_BUFFERS]: Adjust to aliasing
	change.

2011-04-27  Paul Eggert  <eggert@cs.ucla.edu>

	* nsmenu.m: Replace all uses of XVECTOR with ASIZE and AREF.
	This makes this file independent of the recent pseudovector change.

2011-04-26  Paul Eggert  <eggert@cs.ucla.edu>

	* keyboard.c (handle_user_signal): Fix pointer signedness problem.

	* gnutls.c (emacs_gnutls_handle_error): Remove unused local.