@@ -1,3 +1,7 @@
+2011-04-28  Paul Eggert  <eggert@cs.ucla.edu>
+
+	* doprnt.c (doprnt): Omit useless test; int overflow check (Bug#8545).
+
 2011-04-28  Juanma Barranquero  <lekktu@gmail.com>
 
 	* w32.c (init_environment): Warn about defaulting HOME to C:\.
